# jpegdaoworking

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  config.toml
deploy/: README.md  hashminer.nssm.cmd  hashminer.service
docs/superpowers/plans/: 2026-05-11-hashminer-implementation.md
docs/superpowers/specs/: 2026-05-11-hash256-cli-miner-design.md
docs/superpowers/specs/_contract/: BalanceDelta.sol  BeforeSwapDelta.sol  BitMath.sol  Currency.sol  CustomRevert.sol  ERC20.sol  FixedPoint96.sol  FullMath.sol  Hash.sol  Hooks.sol  IERC20.sol  IERC20Metadata.sol  IERC20Minimal.sol  IERC6909Claims.sol  IExtsload.sol  IExttload.sol  IHooks.sol  IPoolManager.sol  IProtocolFees.sol  LPFeeLibrary.sol  LiquidityAmounts.sol  ParseBytes.sol  PoolId.sol  PoolKey.sol  ReentrancyGuard.sol  SafeCast.sol  TickMath.sol  constructor-args.txt  creator-tx-hash.txt  draft-IERC6093.sol  immutable-references.json  metadata.json
kernel/: keccak_device.cuh  keccak_grinder.cu  result_codec.cuh
src/: config.rs  error.rs  lib.rs  main.rs  rpc.rs  state.rs
src/chain/: challenge.rs  contract.rs  fake.rs  mod.rs  watcher.rs
src/gpu/: fake.rs  kernel_ffi.rs  mod.rs  ptx.rs  worker.rs
src/metrics/: jsonl.rs  mod.rs  redact.rs  stdout.rs
src/tx/: builder.rs  builder_test_compile.rs  ev_gate.rs  fake.rs  mod.rs  nonce_manager.rs  relay.rs  submitter.rs
src/wallet/: keystore.rs  mod.rs  signer.rs
tests/: challenge_cpu.rs  e2e_anvil.rs  kernel_correctness.rs  keystore_unlock.rs  stale_hit_filter.rs  tx_nonce_gate.rs
