[package]
name = "hashminer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native CUDA miner for hash256 on-chain PoW token"
default-run = "hashminer"

[features]
default = []
cuda-runtime = ["dep:cudarc"]         # gates kernel correctness tests + GPU binaries

[dependencies]
alloy = { version = "0.8", features = ["full", "node-bindings", "providers", "rpc-types", "signer-keystore", "signer-local"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tiny-keccak = { version = "2", features = ["keccak"] }
eth-keystore = "0.5"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"
anyhow = "1"
rpassword = "7"
rand = "0.8"
async-trait = "0.1"
url = "2"
parking_lot = "0.12"
once_cell = "1"
cudarc = { version = "0.19", default-features = false, features = ["driver", "nvrtc", "cuda-12030", "fallback-dynamic-loading"], optional = true }

[build-dependencies]
which = "6"

[dev-dependencies]
wiremock = "0.6"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bin]]
name = "hashminer"
path = "src/main.rs"

[[bin]]
name = "hashminer-bench"
path = "bin/hashminer-bench.rs"
